Кипит работа а я в слезах

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.sample</groupId>
+            <artifactId>sample</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/fastcgi-lib.jar</systemPath>
+        </dependency>
+        <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test-junit5</artifactId>
             <version>1.9.23</version>
