Сейчас всё работает, кроме сервера лол. Сделаю его немного посложнее, накатим архитектуры.

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     </repositories>
 
     <build>
-        <sourceDirectory>src/main/kotlin</sourceDirectory>
+        <sourceDirectory>src/main/java</sourceDirectory>
         <testSourceDirectory>src/test/kotlin</testSourceDirectory>
         <plugins>
             <plugin>
